2009-05-10  Dan Bernstein  <mitz@apple.com>

        Reviewed by Dave Kilzer.

        - new test and correct results for https://bugs.webkit.org/show_bug.cgi?id=25602
          REGRESSION: fast/overflow/overflow-focus-ring.html seems double-drawn
          on ToT

        * fast/layers/self-painting-outline.html: Added.
        * platform/mac/fast/overflow/overflow-focus-ring-expected.checksum: Updated.
        * platform/mac/fast/overflow/overflow-focus-ring-expected.png: Updated.
        * platform/mac/fast/layers/self-painting-outline-expected.checksum: Added.
        * platform/mac/fast/layers/self-painting-outline-expected.png: Added.
        * platform/mac/fast/layers/self-painting-outline-expected.txt: Added.

2009-05-09  Dan Bernstein  <mitz@apple.com>

        Reviewed by Geoffrey Garen and Mark Rowe.

        - test for https://bugs.webkit.org/show_bug.cgi?id=25666
          Assertion failure in Node::setDocument()
          (willMoveToNewOwnerDocumentWasCalled) when adopting a <form> element

        * fast/dom/HTMLFormElement/adopt-assertion-expected.txt: Added.
        * fast/dom/HTMLFormElement/adopt-assertion.html: Added.

2009-05-09  Geoffrey Garen  <ggaren@apple.com>

        Rubber stamped by Beth Dakin.
        
        Added a test for a math edge case I just came across.

        * fast/js/postfix-syntax-expected.txt:
        * fast/js/resources/postfix-syntax.js:

2009-05-09  Dan Bernstein  <mitz@apple.com>

        - correct the results from the previous patch

2009-05-09  Dan Bernstein  <mitz@apple.com>

        - update Windows-specific layout test results for textarea
          intrinsic margin change (r43355)

        * platform/win/editing/inserting/4960120-1-expected.txt:
        * platform/win/editing/pasteboard/nested-blocks-with-text-area-expected.txt:
        * platform/win/editing/pasteboard/pasting-tabs-expected.txt:
        * platform/win/fast/css/resize-corner-tracking-expected.txt: